--- a/Mission11/Views/Shared/_Layout.cshtml
+++ b/Mission11/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="../lib/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/lib/font-awesome/css/all.min.css" rel="stylesheet" />
 
 </head>
 
@@ -16,7 +15,7 @@
     <div class="bg-dark text-white p-2">
         <div class="container-fluid">
             <div class="row">
-                <div class="col navbar-brand">BOOKSTORE</div>
+                <div class="col navbar-brand py-5">BOOKSTORE</div>
                 <div class="col-6 text-right">
                     <vc:basket-summary />
                 </div>
