--- a/Mission11/Views/Shared/_Layout.cshtml
+++ b/Mission11/Views/Shared/_Layout.cshtml
@@ -12,15 +12,27 @@
 
 <body>
 
-    <div class="bg-dark text-white p-2">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary py-5">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col navbar-brand py-5">BOOKSTORE</div>
-                <div class="col-6 text-right">
-                    <vc:basket-summary />
-                </div>
-            </div>
-        </div>
+            <a class="navbar-brand" href="#">BOOKSTORE</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="main_nav">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">Hover me</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/admin">Admin</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div> <!-- navbar-collapse.// -->
+        </div> <!-- container-fluid.// -->
+    </nav>
+
+    <div class="col-6 text-right">
+        <vc:basket-summary />
     </div>
 
     <div class="row m-1 p-1">
